Fix Twig config.

--- a/config/services/twig.yml
+++ b/config/services/twig.yml
@@ -7,6 +7,8 @@ services:
   AppBundle\Twig\:
     resource: '../../src/Twig/*'
 
+  Twig\Extra\Intl\IntlExtension: '@twig.extension.intl'
+
   AppBundle\Twig\AppearanceRuntime:
     arguments:
       $logoFallback: '%kernel.project_dir%/web/img/logo.png'
@@ -21,14 +23,6 @@ services:
       $redis: '@snc_redis.default'
       $locale: '%env(COOPCYCLE_LOCALE)%'
 
-  Twig\Extra\Intl\IntlExtension:
-    tags:
-      - { name: twig.extension }
-
-  Twig\Extra\String\StringExtension:
-    tags:
-      - { name: twig.extension }
-
   AppBundle\Twig\CacheExtension\KeyGenerator: ~
 
   Twig\Extra\Cache\CacheRuntime:
@@ -36,10 +30,6 @@ services:
       $cache: '@twig.cache'
     tags:
       - { name: twig.runtime }
-
-  Twig\Extra\Cache\CacheExtension:
-    tags:
-      - { name: twig.extension }
 
   AppBundle\Twig\OAuthRuntime:
     arguments:
@@ -55,20 +45,12 @@ services:
     tags:
       - { name: twig.runtime }
 
-  Twig\Extra\Markdown\MarkdownExtension:
-    tags:
-      - { name: twig.extension }
-
   AppBundle\Twig\SettingResolver:
     arguments:
       # We cache the Google API key validation result,
       # so we use this cache pool, so that it's cleared
       # after settings are changed
       $cache: '@craue_config_cache_provider'
-
-  Twig\Extra\Html\HtmlExtension:
-    tags:
-      - { name: twig.extension }
 
   AppBundle\Twig\SyliusVariantResolver:
     arguments:
