Fix kernel class for Behat.

--- a/behat.yml
+++ b/behat.yml
@@ -12,7 +12,7 @@ default:
   extensions:
     FriendsOfBehat\SymfonyExtension:
       kernel:
-        class: AppKernel
+        class: AppBundle\Kernel
         environment: test
         debug: true
     Behat\MinkExtension:
