clean: add auto-scripts in composer.json

--- a/composer.json
+++ b/composer.json
@@ -223,15 +223,16 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
             "@auto-scripts"
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ],
-        "auto-scripts": {
-
-        }
+        ]
     },
     "extra": {
         "symfony-app-dir": "app",
