--- a/behat.yml
+++ b/behat.yml
@@ -15,6 +15,8 @@ default:
         class: AppBundle\Kernel
         environment: test
         debug: true
+      # https://github.com/FriendsOfBehat/SymfonyExtension/issues/126
+      bootstrap: 'tests/bootstrap.php'
     Behat\MinkExtension:
       sessions:
         default:
