--- a/composer.json
+++ b/composer.json
@@ -225,8 +225,8 @@
     "prefer-stable": true,
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "cache:clear --no-warmup": "symfony-cmd",
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -239,7 +239,7 @@
         "symfony-app-dir": "app",
         "symfony-bin-dir": "bin",
         "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
+        "public-dir": "web",
         "symfony-tests-dir": "tests",
         "symfony-assets-install": "relative",
         "symfony": {
