fixed: duplicate profiler config

--- a/config/packages/test/web_profiler.yaml
+++ b/config/packages/test/web_profiler.yaml
@@ -1,3 +1,7 @@
 web_profiler:
-    toolbar: false
-    intercept_redirects: false
+  toolbar: false
+  intercept_redirects: false
+
+framework:
+  profiler:
+    collect: false
