fixed: validators translations

--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -2,7 +2,7 @@ framework:
     validation:
         email_validation_mode: html5
         enable_annotations: true
-        translation_domain: 'validations'
+        translation_domain: 'validators'
 
         # Enables validator auto-mapping support.
         # For instance, basic validation constraints will be inferred from Doctrine's metadata.
