--- a/config/services/serializer.yml
+++ b/config/services/serializer.yml
@@ -3,6 +3,8 @@ services:
   _defaults:
     autowire: true
     autoconfigure: true
+    bind:
+      $country: "%country_iso%"
 
   misd_phone_number.serializer.normalizer:
     class: AppBundle\Serializer\PhoneNumberNormalizer
