--- a/composer.json
+++ b/composer.json
@@ -174,7 +174,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "symfony/workflow": "5.4.*",
         "symfony/lock": "5.4.*",
-        "symfony/proxy-manager-bridge": "5.4.*"
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "nikic/php-parser": "^4"
     },
     "require-dev": {
         "symfony/debug-bundle": "*",
