--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,7 +7,6 @@ imports:
   - { resource: services/doctrine_extensions.yml }
   - { resource: services/messenger.yaml }
   - { resource: services/message_bus/order.yml }
-  - { resource: services/message_bus/task.yml }
 
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
@@ -1676,3 +1675,28 @@ services:
   AppBundle\Messenger\EventStoreMiddleware:
     arguments:
       - '@coopcycle.domain.event_store'
+
+  AppBundle\MessageHandler\Task\SendSms:
+    arguments:
+      - '@coopcycle.settings_manager'
+      - '@sylius.repository.order'
+      - '@messenger.default_bus'
+      - '@libphonenumber\PhoneNumberUtil'
+      - '@router'
+      - '@translator'
+      - '%secret%'
+
+  AppBundle\MessageHandler\Task\NotifyUrbantz:
+    arguments:
+      - '@urbantz.client'
+      - '@doctrine.orm.default_entity_manager'
+      - '%secret%'
+      - '@monolog.logger.urbantz'
+
+  AppBundle\MessageHandler\Task\NotifyLoopeat:
+    arguments:
+      - '@AppBundle\LoopEat\Client'
+      - '@monolog.logger.loopeat'
+    tags:
+      - name: event_subscriber
+        subscribes_to: task:incident-reported
