Disable PatchAwareStoreNormalizer as it breaks things.

--- a/config/services/serializer.yml
+++ b/config/services/serializer.yml
@@ -141,7 +141,7 @@ services:
       $secret: '%secret%'
     tags: [ { name: serializer.normalizer, priority: 128 } ]
 
-  AppBundle\Serializer\PatchAwareStoreNormalizer:
-    arguments:
-      $normalizer: "@api_platform.jsonld.normalizer.item"
-    tags: [ { name: serializer.normalizer, priority: 128 } ]
+  # AppBundle\Serializer\PatchAwareStoreNormalizer:
+  #   arguments:
+  #     $normalizer: "@api_platform.jsonld.normalizer.item"
+  #   tags: [ { name: serializer.normalizer, priority: 128 } ]
