--- a/config/services/commands.yml
+++ b/config/services/commands.yml
@@ -4,6 +4,8 @@ services:
     autowire: true
     autoconfigure: true
     public: false
+    bind:
+      $environment: "%kernel.environment%"
 
   AppBundle\Command\ApplyTaxesCommand:
     arguments:
@@ -51,9 +53,12 @@ services:
     arguments:
       $fixturesLoader: '@fidry_alice_data_fixtures.loader.doctrine'
       $projectDir: '%kernel.project_dir%'
-      $environment: '%kernel.environment%'
     tags:
       - { name: 'console.command', command: 'coopcycle:fixtures:load' }
+
+  AppBundle\Command\MockDatetimeCommand:
+    tags:
+      - { name: 'console.command', command: 'coopcycle:datetime:mock' }
 
   AppBundle\Command\SetupCommand:
     arguments:
